# structure-and-dynamics

./: README.md  pyproject.toml  requirements.txt
postproc/: corr.py  flow.py
src/: analysis.py  clusters.py  corr.py  density_field.py  flow.py  radial.py
