[project]
name = "abp-pp"
version = "0.1.0"
description = "Post-processing tools for ABP simulations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "tqdm"
]

[project.scripts]
abp-mov = "postproc.flow:main"
abp-clust = "postproc.clusters:main"
abp-corr = "postproc.corr:main"
abp-rdf = "postproc.radial:main"
abp-obs = "postproc.analysis:main"
abp-den = "postproc.density_field:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"